--- a/EligiblesListingAPI/EligiblesListingAPI.Infrastructure/EligiblesListingAPI.Infrastructure.csproj
+++ b/EligiblesListingAPI/EligiblesListingAPI.Infrastructure/EligiblesListingAPI.Infrastructure.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EligiblesListingAPI.Domain\EligiblesListingAPI.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
