--- a/EligiblesListingAPI/EligiblesListingAPI/EligiblesListingAPI.csproj
+++ b/EligiblesListingAPI/EligiblesListingAPI/EligiblesListingAPI.csproj
@@ -10,4 +10,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EligiblesListingAPI.Application\EligiblesListingAPI.Application.csproj" />
+    <ProjectReference Include="..\EligiblesListingAPI.Domain\EligiblesListingAPI.Domain.csproj" />
+    <ProjectReference Include="..\EligiblesListingAPI.Infrastructure\EligiblesListingAPI.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
