--- a/EligiblesListingAPI/EligiblesListingAPI.Infrastructure/EligiblesListingAPI.Infrastructure.csproj
+++ b/EligiblesListingAPI/EligiblesListingAPI.Infrastructure/EligiblesListingAPI.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="32.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
   </ItemGroup>
