--- a/EligiblesListingAPI/EligiblesListingAPI.Test/EligiblesListingAPI.Test.csproj
+++ b/EligiblesListingAPI/EligiblesListingAPI.Test/EligiblesListingAPI.Test.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EligiblesListingAPI.Application\EligiblesListingAPI.Core.csproj" />
+    <ProjectReference Include="..\EligiblesListingAPI.Core\EligiblesListingAPI.Core.csproj" />
     <ProjectReference Include="..\EligiblesListingAPI.Domain\EligiblesListingAPI.Domain.csproj" />
     <ProjectReference Include="..\EligiblesListingAPI.Infrastructure\EligiblesListingAPI.Infrastructure.csproj" />
     <ProjectReference Include="..\EligiblesListingAPI\EligiblesListingAPI.csproj" />
