--- a/EligiblesListingAPI/EligiblesListingAPI/EligiblesListingAPI.csproj
+++ b/EligiblesListingAPI/EligiblesListingAPI/EligiblesListingAPI.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EligiblesListingAPI.Application\EligiblesListingAPI.Application.csproj" />
+    <ProjectReference Include="..\EligiblesListingAPI.Core\EligiblesListingAPI.Core.csproj" />
     <ProjectReference Include="..\EligiblesListingAPI.Domain\EligiblesListingAPI.Domain.csproj" />
     <ProjectReference Include="..\EligiblesListingAPI.Infrastructure\EligiblesListingAPI.Infrastructure.csproj" />
   </ItemGroup>
